# FizzBuzz

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
fizz_buzz/: __init__.py  core.py
fizz_buzz/script/: fizz_buzz.py
fizz_buzz/scripts/: fizz_buzz.py
tests/: test_core.py
